# confidence-tom

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.cloudrun  README.md  cloudbuild.cloudrun.yaml  observer_presentation.txt  pyproject.toml
configs/: config.yaml  config_gemma2_9b.yaml  config_hard.yaml  intervention_pilot.yaml  oracle_gain_mapping.yaml  prefix_family_sweep.yaml  prefix_family_sweep_livebench.yaml  prefix_family_sweep_livebench_mistral_local.yaml  prefix_family_sweep_livebench_qwen_local.yaml  prefix_family_sweep_mistral_local.yaml  prefix_family_sweep_qwen_local.yaml  prefix_family_sweep_reentry_aime_ollama.yaml  prefix_family_sweep_reentry_gpqa_ollama.yaml  prefix_family_sweep_reentry_livebench_ollama.yaml  prefix_family_sweep_reentry_math500_ollama.yaml  prefix_family_sweep_reentry_olympiad_ollama.yaml  prefix_oracle_gain_mapping.yaml  scale_dynamic.yaml  scale_experiment.yaml  scale_single.yaml
docs/: cloud-run.md  current_caveats_and_fix_plan.md  dynamic-benchmarks.md  early_decision_baseline.md  early_decision_bottlenecks.md  early_decision_case_studies.md  early_decision_takeover_alignment.md  hidden_state_pooling_compare.md  hidden_state_positive_routing.md  hidden_state_routing.md  hidden_state_routing_layer_sweep.md  minimal_sufficient_prefix_analysis.md  oracle_gain_fragility_proposal.md  prefix_family_comparison.md  prefix_signal_pattern_analysis.md  qwen3_scale_manager_report.md  teacher_report_prefix_intervention_report.md  trace_taxonomy_analysis.md  voi_intervention_proposal.md
experiments/: .gitkeep  __init__.py  analyze_advanced_routing_policies.py  analyze_cross_benchmark_task_clusters.py  analyze_early_decision_bottlenecks.py  analyze_early_decision_representation_probe.py  analyze_early_decision_takeover_alignment.py  analyze_hidden_state_pooling_compare.py  analyze_hidden_state_positive_routing.py  analyze_hidden_state_routing.py  analyze_hidden_state_routing_layer_sweep.py  analyze_minimal_sufficient_prefix.py  analyze_oracle_gain_mapping.py  analyze_prefix_embedding_probe.py  analyze_prefix_oracle_gain.py  analyze_prefix_predictor_failure.py  analyze_prefix_reentry_controls.py  analyze_prefix_signal_patterns.py  analyze_prefix_task_structure.py  analyze_probability_stable_msp.py  analyze_results.py  analyze_routing_simulation.py  analyze_scale_observer.py  analyze_scale_results.py  analyze_scale_results_dynamic.py  analyze_scale_results_single.py  analyze_segment_removal_bottlenecks.py  analyze_trace_taxonomy.py  backfill_large_takeover_from_small.py  build_early_decision_case_studies.py  build_early_decision_dataset.py  build_early_decision_representation_dataset.py  build_family_summary.py  build_prefix_embedding_dataset.py  build_prefix_predictor_dataset.py  extract_early_decision_hidden_states.py  pilot2_visual_checks.py  plot_prefix_task_structure.py  run_api_determinism_audit.py  run_colab_prefix_family_rerun.py  (+29 more)
results/: .gitkeep  experiment_report.md
tests/: test_client_backend_kwargs.py  test_compat_shims.py  test_evaluators.py  test_paths.py  test_placeholder.py  (+6 more)
(+301 files in other folders)
